--- a/views/shop/index.hbs
+++ b/views/shop/index.hbs
@@ -1,3 +1,11 @@
+
+<div class="row">
+    <div class="col-sm-6 col-md-4 col-md-offset-4 col-sm-offset-3">
+        <div id="success" class="alert alert-success {{#if noMessage}}hidden{{/if}}"></div>
+        {{successMsg}}
+    </div>
+</div>
+
 {{# each products}}
 <div class="row">
 {{# each this}}
@@ -9,7 +17,7 @@
                 <p class="description">{{this.description}}</p>
                 <div class="clearfix">
                     <div class="price pull-left">${{this.price}}</div>
-                    <a href="#" class="btn btn-success pull-right" role="button">Add to cart</a>
+                    <a href="/add-to-cart/{{this._id}}" class="btn btn-success pull-right" role="button">Add to cart</a>
                 </div>
             </div>
         </div>
