--- a/views/user/profile.hbs
+++ b/views/user/profile.hbs
@@ -1,1 +1,37 @@
-<h1>welcome profile</h1>
+
+        
+    
+
+<div class="container">
+<div class="row">
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+        
+        <h1>User Profile</h1>
+        <hr>
+        <h2>My orders</h2>    
+          {{# each orders}}
+                <div class="panel panel-default">
+                    <div class="panel-body">
+                    <ul class="list-group">
+                        {{# each this.items}}
+
+                        <li class="list-group-item">
+                            <span class="badge">{{this.price}}</span>
+                            {{this.item.title}}|{{this.qty}} units
+                        </li>
+                        {{/each}}
+                    </ul>
+                    
+                    </div>
+                        </div class="panel-footer">
+                           <strong>total:${{this.cart.totalPrice}}</strong>
+                        </div>
+                  </div>    
+      
+        
+        
+          {{/each}}
+        
+    </div>
+</div>
+</div>
