--- a/views/user/signin.hbs
+++ b/views/user/signin.hbs
@@ -25,7 +25,7 @@
                 <button type="submit" class="btn btn-primary">Sign up</button>
                   
             </form>
-            
+            <p>don't have an acoount? <a href="/user/signup">sign up now</a></p>
          </div>
     </div>
     
