add feature remove

--- a/views/shop/shopping-cart.hbs
+++ b/views/shop/shopping-cart.hbs
@@ -15,8 +15,8 @@
            <div class="btn-group">
                 <button type="button" class="btn btn-primary btn-xs dropdown-toggle" data-toggle="dropdown" >action<span class="caret"></span></button>
                 <ul class="dropdown-menu">
-                    <li><a href="">Reduce by 1</a></li>
-                    <li><a href=""></a>Remave All</li>
+                    <li><a href="/reduce/{{this.item._id}}">Reduce by 1</a></li>
+                    <li><a href="/remove/{{this.item._id}}">Remave Al</a></li>
                 </ul>
             </div>
            
